# StellPoker

./: .env.example  .gitignore  README.md  TODO.md  deny.toml  docker-compose.dev.yml  stellpoker
.github/workflows/: benchmark-regression.yml  ci.yml  dependency-check.yml
app/: next.config.ts  package-lock.json  package.json
app/.storybook/: main.ts  preview.tsx
app/e2e/: playwright.config.ts
app/e2e/tests/: action-submission.spec.ts  proof-explorer.spec.ts  table-join.spec.ts
app/src/__tests__/: setup.ts  transaction-simulation-integration.test.ts  wallet-integration.test.ts
app/src/app/: globals.css  page.tsx
app/src/components/: ActionPanel.stories.tsx  Board.stories.tsx  Card.stories.tsx  GameBoyModal.stories.tsx  HandHistoryPanel.stories.tsx  Identicon.stories.tsx  Table.tsx  (+5 more)
benchmark_data/: benchmarks.csv
contracts/: gas-budgets.json
contracts/committee-registry/: Cargo.toml
contracts/committee-registry/benches/: bench_main.rs
contracts/committee-registry/src/: constant_time.rs  lib.rs
docs/: NOIR_TESTING_GUIDE.md  coordinator-troubleshooting.md  disaster-recovery.md  soroban-storage-optimization.md  test-coverage-report.md  video-tutorial-series.md
docs/api/: examples.md
infrastructure/terraform/: TLS_GATEWAY.md  aws_cdn.tf  aws_ecs.tf  aws_rds.tf  aws_shield.tf  aws_waf.tf  budgets.tf  outputs.tf  todo_349_gateway_note.txt  variables.tf
scripts/: restore-coordinator-db.sh  setup-backup-cron.sh
security/: audit-template.md
services/coordinator/: Cargo.toml  Dockerfile
services/node/: Cargo.toml  Dockerfile
tests/: README.md
(+32 files in other folders)
